# RNNmpc

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: python-package-conda.yml
RNNmpc/: MPController.py  README.md  __init__.py  utils.py
RNNmpc/Forecasters/: ESNForecaster.py  FCForecaster.py  GRUForecaster.py  LinearForecaster.py  Reservoir.py  Training.py  s5_forecaster.py  test.ipynb
RNNmpc/Simulators/: CylinderControl.py  LorenzControl.py  NeuromancerControl.py  SpringMassControl.py  StirredTankControl.py  TwoTankControl.py  __init__.py
RNNmpc/Tests/: __init__.py
RNNmpc/tests/Forecasters/: test_s5_forecaster.py
Tests/Simulators/: test_NeuromancerControl.py
doc/: components.md  user_stories.md
results/Cylinder/: best_hyperparams.json  hyperparam_results.json
results/Lorenz/: hyperparam_results.json
results/SpringMass/: best_hyperparams.json
results/TwoTank/: best_hyperparams.json
scripts/: README.md  control_plotting.py  control_sim.py  cuda_test copy.ipynb  data_len_plotting.py  forecast_plots.py  forecast_plotting.py  forecast_results.py  generate_data.py  hyperparam_plots.py  hyperparam_search.py  noise_plotting.py  noise_results.py  test_control.ipynb  train_data_length.py  utils.py
scripts/ExampleNotebooks/: LorenzControl.ipynb  projectdemo.ipynb
src/RNNmpc/: __init__.py  utils.py
src/RNNmpc/Forecasters/: LSTMForecaster.py  (+3 more)
tests/: __init__.py  test_closed_loop_sim.py
tests/Forecasters/: test_s5_forecaster.py
tests/Simulators/: test_neuromancercontrol.py  test_odeControl.py  test_odecontrol.py
(+39 files in other folders)
